2013-03-29  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* pinfo.h (pinfo::status_exit): Rename from former static function in
	pinfo.cc.
	(pinfo::operator == (char *)): Remove unused operator.
	* pinfo.cc (pinfo::status_exit): Move this function info pinfo class.
	Use progname from the pinfo rather than myself.  Be defensive when
	inspecting procinfo.

2013-03-29  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* sigproc.cc (wait_sig): Avoid uninitialized use of nb when retrying.
	Consolidate two error messages into one.

2013-03-28  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* sigproc.cc (pending_signals::retry): Declare new element.
	(pending_signals::pending): Force an additional loop through wait_sig
	by setting retry whenever this function is called.
	(wait_sig): Reorganize to wait for SIGHOLD at bottom.  Always add
	signal to pending queue and work on whole queue rather than just the
	one signal.  Loop when sigq.retry is set.  Fix long-broken check for
	SIGCHLD after queued signals.

2013-03-28  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* exceptions.cc (exception::handle): Generalize comment.

2013-03-09  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygtls.h (_cygtls::signal_debugger): Change argument type.
	(_cygtls::copy_context): Delete declaration.
	* exceptions.cc (exception::handle): Don't call copy_context() here.
	Move signal_handler call earlier and always call it.  
	(_cygtls::copy_context): Delete definition.
	(_cygtls::signal_debugger): Move copy_context logic here.  Suspend
	thread receiving signal before gathering context information.

2013-03-08  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* spawn.cc (child_info_spawn::worker): Save and restore my_wr_proc_pipe
	around non-execing operations to avoid handle leak seen in
	http://cygwin.com/ml/cygwin/2013-03/msg00152.html .

2013-03-07  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/un.h (UNIX_PATH_MAX): Rename from UNIX_PATH_LEN to
	follow Linux.