@@ -37,6 +37,7 @@ struct wincaps
   unsigned wow64_has_secondary_stack			: 1;
   unsigned has_program_compatibility_assistant		: 1;
   unsigned has_pipe_reject_remote_clients		: 1;
+  unsigned terminate_thread_frees_stack			: 1;
 };
 
 class wincapc
@@ -85,6 +86,7 @@ public:
   bool	IMPLEMENT (wow64_has_secondary_stack)
   bool	IMPLEMENT (has_program_compatibility_assistant)
   bool	IMPLEMENT (has_pipe_reject_remote_clients)
+  bool	IMPLEMENT (terminate_thread_frees_stack)
 
 #undef IMPLEMENT
 };
